// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainCreateResult renders correctly with all failed 1`] = `
<div
  className="comp-domain-create-result"
>
  <div
    className="icecream-breadcrumb"
  />
  <div
    className=""
  >
    <div
      className="create-result-content"
    >
      <section
        className="result-summary"
      >
        <div
          className="result-summary-header"
        >
          <i
            aria-label="icon: close-circle"
            className="anticon anticon-close-circle summary-icon success"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </i>
          <span
            className="result-summary-header-title"
          >
            域名创建失败
            ...
          </span>
        </div>
        <div
          className="result-summary-tip"
        >
          如需使用 CDN 加速服务，请配置 CNAME
        </div>
        <div
          className="result-summary-actions"
        >
          <button
            className="ant-btn actions-btn ant-btn-primary"
            onClick={[Function]}
            type="button"
          >
            <span>
              如何配置 CNAME
            </span>
          </button>
          <button
            className="ant-btn actions-btn"
            onClick={[Function]}
            type="button"
          >
            <span>
              返回域名管理
            </span>
          </button>
        </div>
      </section>
      <div
        className="ant-table-wrapper result-list"
      >
        <div
          className="ant-spin-nested-loading"
        >
          <div>
            <div
              className="ant-spin ant-spin-spinning ant-table-without-pagination ant-table-spin-holder"
            >
              <span
                className="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            className="ant-spin-container ant-spin-blur"
          >
            <div
              className="ant-table ant-table-middle ant-table-scroll-position-left"
              style={Object {}}
            >
              <div
                className="ant-table-content"
              >
                <div
                  className="ant-table-body"
                  onScroll={[Function]}
                  onWheel={[Function]}
                  style={Object {}}
                >
                  <table
                    className=""
                    style={Object {}}
                  >
                    <colgroup>
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                    </colgroup>
                    <thead
                      className="ant-table-thead"
                    >
                      <tr
                        style={
                          Object {
                            "height": null,
                          }
                        }
                      >
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                域名
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                <span
                                  className="comp-cname-tool-tip"
                                >
                                  CNAME
                                  <i
                                    aria-label="icon: question-circle"
                                    className="anticon anticon-question-circle tool-tip-icon"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="question-circle"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                                      />
                                    </svg>
                                  </i>
                                </span>
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                状态
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      className="ant-table-tbody"
                    >
                      <tr
                        className="ant-table-row ant-table-row-level-0"
                        data-row-key="www.qiniu.com"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onDoubleClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        style={
                          Object {
                            "height": null,
                          }
                        }
                      >
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="ant-table-row-indent indent-level-0"
                            style={
                              Object {
                                "paddingLeft": "0px",
                              }
                            }
                          />
                          www.qiniu.com
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          --
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="status-error"
                          />
                        </td>
                      </tr>
                      <tr
                        className="ant-table-row ant-table-row-level-0"
                        data-row-key="foo.com"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onDoubleClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        style={
                          Object {
                            "height": null,
                          }
                        }
                      >
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="ant-table-row-indent indent-level-0"
                            style={
                              Object {
                                "paddingLeft": "0px",
                              }
                            }
                          />
                          foo.com
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          --
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="status-error"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div
                  className="ant-table-footer"
                >
                  <div
                    className="result-list-retry"
                  >
                    域名创建失败
                    ，点击
                    <button
                      className="ant-btn ant-btn-link"
                      onClick={[Function]}
                      type="button"
                    >
                      <span>
                        重试
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DomainCreateResult renders correctly with all success 1`] = `
<div
  className="comp-domain-create-result"
>
  <div
    className="icecream-breadcrumb"
  />
  <div
    className=""
  >
    <div
      className="create-result-content"
    >
      <section
        className="result-summary"
      >
        <div
          className="result-summary-header"
        >
          <i
            aria-label="icon: check-circle"
            className="anticon anticon-check-circle summary-icon success"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="check-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 0 1-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
              />
            </svg>
          </i>
          <span
            className="result-summary-header-title"
          >
            域名创建成功，配置部署中
            ...
          </span>
        </div>
        <div
          className="result-summary-tip"
        >
          如需使用 CDN 加速服务，请配置 CNAME
        </div>
        <div
          className="result-summary-actions"
        >
          <button
            className="ant-btn actions-btn ant-btn-primary"
            onClick={[Function]}
            type="button"
          >
            <span>
              如何配置 CNAME
            </span>
          </button>
          <button
            className="ant-btn actions-btn"
            onClick={[Function]}
            type="button"
          >
            <span>
              返回域名管理
            </span>
          </button>
        </div>
      </section>
      <div
        className="ant-table-wrapper result-list"
      >
        <div
          className="ant-spin-nested-loading"
        >
          <div>
            <div
              className="ant-spin ant-spin-spinning ant-table-without-pagination ant-table-spin-holder"
            >
              <span
                className="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            className="ant-spin-container ant-spin-blur"
          >
            <div
              className="ant-table ant-table-middle ant-table-scroll-position-left"
              style={Object {}}
            >
              <div
                className="ant-table-content"
              >
                <div
                  className="ant-table-body"
                  onScroll={[Function]}
                  onWheel={[Function]}
                  style={Object {}}
                >
                  <table
                    className=""
                    style={Object {}}
                  >
                    <colgroup>
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                    </colgroup>
                    <thead
                      className="ant-table-thead"
                    >
                      <tr
                        style={
                          Object {
                            "height": null,
                          }
                        }
                      >
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                域名
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                <span
                                  className="comp-cname-tool-tip"
                                >
                                  CNAME
                                  <i
                                    aria-label="icon: question-circle"
                                    className="anticon anticon-question-circle tool-tip-icon"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="question-circle"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                                      />
                                    </svg>
                                  </i>
                                </span>
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                状态
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      className="ant-table-tbody"
                    >
                      <tr
                        className="ant-table-row ant-table-row-level-0"
                        data-row-key="www.qiniu.com"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onDoubleClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        style={
                          Object {
                            "height": null,
                          }
                        }
                      >
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="ant-table-row-indent indent-level-0"
                            style={
                              Object {
                                "paddingLeft": "0px",
                              }
                            }
                          />
                          <a
                            className="comp-router-link"
                            href="/cdn/domain/www.qiniu.com"
                            onClick={[Function]}
                          >
                            www.qiniu.com
                          </a>
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="cname"
                          >
                            10rduchl.qiniudns.com
                          </span>
                          <a
                            className="comp-copy-link-content copy-cname"
                            onClick={[Function]}
                          >
                            复制CNAME
                          </a>
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="status-success"
                          >
                            添加成功
                          </span>
                        </td>
                      </tr>
                      <tr
                        className="ant-table-row ant-table-row-level-0"
                        data-row-key="foo.com"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onDoubleClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        style={
                          Object {
                            "height": null,
                          }
                        }
                      >
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="ant-table-row-indent indent-level-0"
                            style={
                              Object {
                                "paddingLeft": "0px",
                              }
                            }
                          />
                          <a
                            className="comp-router-link"
                            href="/cdn/domain/foo.com"
                            onClick={[Function]}
                          >
                            foo.com
                          </a>
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="cname"
                          >
                            10rduchl.qiniudns.com
                          </span>
                          <a
                            className="comp-copy-link-content copy-cname"
                            onClick={[Function]}
                          >
                            复制CNAME
                          </a>
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="status-success"
                          >
                            添加成功
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div
                  className="ant-table-footer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DomainCreateResult renders correctly with no domain info 1`] = `
<div
  className="comp-domain-create-result"
>
  <div
    className="icecream-breadcrumb"
  />
  <div
    className=""
  >
    <div
      className="create-result-content"
    >
      <section
        className="result-summary"
      >
        <div
          className="result-summary-header"
        >
          <i
            aria-label="icon: check-circle"
            className="anticon anticon-check-circle summary-icon success"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="check-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 0 1-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
              />
            </svg>
          </i>
          <span
            className="result-summary-header-title"
          >
            域名创建成功，配置部署中
            ...
          </span>
        </div>
        <div
          className="result-summary-tip"
        >
          如需使用 CDN 加速服务，请配置 CNAME
        </div>
        <div
          className="result-summary-actions"
        >
          <button
            className="ant-btn actions-btn ant-btn-primary"
            onClick={[Function]}
            type="button"
          >
            <span>
              如何配置 CNAME
            </span>
          </button>
          <button
            className="ant-btn actions-btn"
            onClick={[Function]}
            type="button"
          >
            <span>
              返回域名管理
            </span>
          </button>
        </div>
      </section>
      <div
        className="ant-table-wrapper result-list"
      >
        <div
          className="ant-spin-nested-loading"
        >
          <div>
            <div
              className="ant-spin ant-spin-spinning ant-table-without-pagination ant-table-spin-holder"
            >
              <span
                className="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            className="ant-spin-container ant-spin-blur"
          >
            <div
              className="ant-table ant-table-middle ant-table-empty ant-table-scroll-position-left"
              style={Object {}}
            >
              <div
                className="ant-table-content"
              >
                <div
                  className="ant-table-body"
                  onScroll={[Function]}
                  onWheel={[Function]}
                  style={Object {}}
                >
                  <table
                    className=""
                    style={Object {}}
                  >
                    <colgroup>
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                    </colgroup>
                    <thead
                      className="ant-table-thead"
                    >
                      <tr
                        style={
                          Object {
                            "height": null,
                          }
                        }
                      >
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                域名
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                <span
                                  className="comp-cname-tool-tip"
                                >
                                  CNAME
                                  <i
                                    aria-label="icon: question-circle"
                                    className="anticon anticon-question-circle tool-tip-icon"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="question-circle"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                                      />
                                    </svg>
                                  </i>
                                </span>
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                状态
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      className="ant-table-tbody"
                    />
                  </table>
                </div>
                <div
                  className="ant-table-placeholder"
                >
                  <div
                    className="ant-empty ant-empty-normal"
                  >
                    <div
                      className="ant-empty-image"
                    >
                      <img
                        alt="No Data"
                        src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNjQiIGhlaWdodD0iNDEiIHZpZXdCb3g9IjAgMCA2NCA0MSIgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPGcgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMCAxKSIgZmlsbD0ibm9uZSIgZmlsbC1ydWxlPSJldmVub2RkIj4KICAgIDxlbGxpcHNlIGZpbGw9IiNGNUY1RjUiIGN4PSIzMiIgY3k9IjMzIiByeD0iMzIiIHJ5PSI3Ii8+CiAgICA8ZyBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgIDxwYXRoIGQ9Ik01NSAxMi43Nkw0NC44NTQgMS4yNThDNDQuMzY3LjQ3NCA0My42NTYgMCA0Mi45MDcgMEgyMS4wOTNjLS43NDkgMC0xLjQ2LjQ3NC0xLjk0NyAxLjI1N0w5IDEyLjc2MVYyMmg0NnYtOS4yNHoiLz4KICAgICAgPHBhdGggZD0iTTQxLjYxMyAxNS45MzFjMC0xLjYwNS45OTQtMi45MyAyLjIyNy0yLjkzMUg1NXYxOC4xMzdDNTUgMzMuMjYgNTMuNjggMzUgNTIuMDUgMzVoLTQwLjFDMTAuMzIgMzUgOSAzMy4yNTkgOSAzMS4xMzdWMTNoMTEuMTZjMS4yMzMgMCAyLjIyNyAxLjMyMyAyLjIyNyAyLjkyOHYuMDIyYzAgMS42MDUgMS4wMDUgMi45MDEgMi4yMzcgMi45MDFoMTQuNzUyYzEuMjMyIDAgMi4yMzctMS4zMDggMi4yMzctMi45MTN2LS4wMDd6IiBmaWxsPSIjRkFGQUZBIi8+CiAgICA8L2c+CiAgPC9nPgo8L3N2Zz4K"
                      />
                    </div>
                    <p
                      className="ant-empty-description"
                    >
                      No Data
                    </p>
                  </div>
                </div>
                <div
                  className="ant-table-footer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DomainCreateResult renders correctly with partial success 1`] = `
<div
  className="comp-domain-create-result"
>
  <div
    className="icecream-breadcrumb"
  />
  <div
    className=""
  >
    <div
      className="create-result-content"
    >
      <section
        className="result-summary"
      >
        <div
          className="result-summary-header"
        >
          <i
            aria-label="icon: close-circle"
            className="anticon anticon-close-circle summary-icon success"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </i>
          <span
            className="result-summary-header-title"
          >
            部分域名创建失败
            ...
          </span>
        </div>
        <div
          className="result-summary-tip"
        >
          如需使用 CDN 加速服务，请配置 CNAME
        </div>
        <div
          className="result-summary-actions"
        >
          <button
            className="ant-btn actions-btn ant-btn-primary"
            onClick={[Function]}
            type="button"
          >
            <span>
              如何配置 CNAME
            </span>
          </button>
          <button
            className="ant-btn actions-btn"
            onClick={[Function]}
            type="button"
          >
            <span>
              返回域名管理
            </span>
          </button>
        </div>
      </section>
      <div
        className="ant-table-wrapper result-list"
      >
        <div
          className="ant-spin-nested-loading"
        >
          <div>
            <div
              className="ant-spin ant-spin-spinning ant-table-without-pagination ant-table-spin-holder"
            >
              <span
                className="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
                <i
                  className="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            className="ant-spin-container ant-spin-blur"
          >
            <div
              className="ant-table ant-table-middle ant-table-scroll-position-left"
              style={Object {}}
            >
              <div
                className="ant-table-content"
              >
                <div
                  className="ant-table-body"
                  onScroll={[Function]}
                  onWheel={[Function]}
                  style={Object {}}
                >
                  <table
                    className=""
                    style={Object {}}
                  >
                    <colgroup>
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                      <col
                        style={
                          Object {
                            "minWidth": undefined,
                            "width": undefined,
                          }
                        }
                      />
                    </colgroup>
                    <thead
                      className="ant-table-thead"
                    >
                      <tr
                        style={
                          Object {
                            "height": null,
                          }
                        }
                      >
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                域名
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                <span
                                  className="comp-cname-tool-tip"
                                >
                                  CNAME
                                  <i
                                    aria-label="icon: question-circle"
                                    className="anticon anticon-question-circle tool-tip-icon"
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                  >
                                    <svg
                                      aria-hidden="true"
                                      className=""
                                      data-icon="question-circle"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                                      />
                                    </svg>
                                  </i>
                                </span>
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                        <th
                          className=""
                        >
                          <span
                            className="ant-table-header-column"
                          >
                            <div>
                              <span
                                className="ant-table-column-title"
                              >
                                状态
                              </span>
                              <span
                                className="ant-table-column-sorter"
                              />
                            </div>
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      className="ant-table-tbody"
                    >
                      <tr
                        className="ant-table-row ant-table-row-level-0"
                        data-row-key="foo.com"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onDoubleClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        style={
                          Object {
                            "height": null,
                          }
                        }
                      >
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="ant-table-row-indent indent-level-0"
                            style={
                              Object {
                                "paddingLeft": "0px",
                              }
                            }
                          />
                          <a
                            className="comp-router-link"
                            href="/cdn/domain/foo.com"
                            onClick={[Function]}
                          >
                            foo.com
                          </a>
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="cname"
                          >
                            10rduchl.qiniudns.com
                          </span>
                          <a
                            className="comp-copy-link-content copy-cname"
                            onClick={[Function]}
                          >
                            复制CNAME
                          </a>
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="status-success"
                          >
                            添加成功
                          </span>
                        </td>
                      </tr>
                      <tr
                        className="ant-table-row ant-table-row-level-0"
                        data-row-key="www.qiniu.com"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onDoubleClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        style={
                          Object {
                            "height": null,
                          }
                        }
                      >
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="ant-table-row-indent indent-level-0"
                            style={
                              Object {
                                "paddingLeft": "0px",
                              }
                            }
                          />
                          www.qiniu.com
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          --
                        </td>
                        <td
                          className=""
                          onClick={[Function]}
                        >
                          <span
                            className="status-error"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div
                  className="ant-table-footer"
                >
                  <div
                    className="result-list-retry"
                  >
                    部分域名创建失败
                    ，点击
                    <button
                      className="ant-btn ant-btn-link"
                      onClick={[Function]}
                      type="button"
                    >
                      <span>
                        重试
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
